@@ -1,0 +1,4 @@
+EXPLAIN
+SELECT x.* FROM SRC x;
+
+SELECT x.* FROM SRC x;
